Bug 1240209: use buffer-half-empty callbacks to send buffered data instead of a timer r=tuexen,drno